# RecSys_and_LLM

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  front_directory_structure.txt  indexing_DL.py  indexing_hybrid.py  indexing_hybrid2.py  indexing_similarity.py  preprocess.py
DB/: README.md  db.py  main.py  pyproject.toml
ML/models/TiSASRec/: TiSASRec_inference.py
ML/models/gSASRec/: gsasrec_inference.py
agent/: main.py  parse.py
agent/simulation/: arena.py  utils.py
agent/simulation/base/: abstract_arena.py
backend/app/: inference.py
front/: app.py
front/components/: __init__.py  conversation_manager.py  pipeline_manager.py  recommend_main.py  response_generator.py
front/pages/: __init__.py  chat_page.py  main_page.py
front/utils/: __init__.py  image_utils.py  item_utils.py  session_utils.py  style_utils.py
ml/: requirements.txt
ml/recwizard/: main.ipynb
recsys_and_llm/backend/app/: config.py  dependencies.py
recsys_and_llm/front/components/: __init__.py  conversation_db_manager.py  pipeline_manager.py
recsys_and_llm/front/pages/: chat_page.py
recsys_and_llm/ml/models/: model_loader.py  model_manager.py
recsys_and_llm/ml/models/Phi4/: item_genre_predict.py  user_genre_predict.py
